--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -26,4 +26,4 @@ jobs:
         distribution: 'temurin'
         cache: 'sbt'
     - name: Run tests
-      run: sbt coverage test coverageReport stats
+      run: sbt test
